# roq-cpp-client-template

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  README.md
benchmark/: .gitignore  CMakeLists.txt  main.cpp  simple.cpp
conda/: build.sh  meta.yaml
scripts/: build_conda.sh  build_conda_package.sh  create_conda_env.sh
src/roq/samples/client/: .gitignore  CMakeLists.txt  application.cpp  application.hpp  config.cpp  config.hpp  main.cpp  settings.cpp  settings.hpp  strategy.cpp  strategy.hpp
src/roq/samples/client/flags/: .gitignore  CMakeLists.txt  flags.json  test.json
src/roq/samples/client/tools/: CMakeLists.txt  simple.cpp  simple.hpp
src/simple/: .gitignore  CMakeLists.txt  application.cpp  application.hpp  config.cpp  config.hpp  main.cpp  settings.cpp  settings.hpp  strategy.cpp  strategy.hpp
src/simple/flags/: .gitignore  CMakeLists.txt  flags.cpp  flags.hpp  flags.json  test.json
src/tools/: CMakeLists.txt  simple.cpp  simple.hpp
test/: .gitignore  CMakeLists.txt  main.cpp  simple.cpp
